# homebrew-gitlab-token-rotator

./: .gitignore  LICENSE  README.md  gitlab-token-rotator.rb  pyproject.toml  requirements.txt  rotate-tokens.py
gitlab_token_rotator/: __init__.py  rotate_tokens.py
