[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gitlab_token_rotator"
authors = [{name = "GiantFrog"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/GiantFrog/homebrew-gitlab-token-rotator"

[project.scripts]
gitlab-token-rotator = "gitlab_token_rotator.rotate_tokens:main"
